# ipk

./: .gitignore
uebung01/: error  files  helloworld.cc  test.cc
uebung02/: errors.cc  legalbutwrong.cc
uebung02/uberDir/: tarDir
uebung02/uberDir/exampleprogram/: quadrat  quadrat.cc
uebung03/: collatz.cc  fibonacci.cc  polynomial.cc
uebung04/: power.cc  wurzel.cc
uebung05/: number.cc  vector.cc
uebung05/solution_05/: parsing.cc  vectors.cc
uebung06/: io.cc  io.hh
uebung06/A3/: graph.py  letters.cc  text.txt  words.cc
uebung06/build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  meantest  mediantest  normal  readvector  uniform
uebung06/source/: CMakeLists.txt  io.cc  io.hh  meantest.cc  mediantest.cc  normal.cc  readvector.cc  statistics.cc  statistics.hh  uniform.cc
uebung07/a1/: point.cc  polygon.cc  polygon.hh  test.cc
uebung07/a2/source/: CMakeLists.txt  canvas.cc  canvas.hh  main.cc  plot.cc  point.cc  point.hh  testcorners.cc
uebung08/a1/: io.cc  io.hh  main.cc  normal.cc  readvector.cc  statistics.cc  statistics.hh  statisticsdriver.cc  uniform.cc
uebung09/: CMakeLists.txt  canvas.hh  iterationresult.cc  iterationresult.hh  main.cc  pgm.cc  point.cc  point.hh
uebung09/solution_09/: main.cc  pgm.cc
uebung11/: frequencysource.hh
uebung11/solution11_frequencies-oop/: frequencies.hh  main-b.cc  plugin.hh
